--- a/index.html
+++ b/index.html
@@ -993,10 +993,10 @@ const sentences = [
         "correctAnswer": "vị khách quý",
         "translation": "贵宾",
         "options": [
-            "vị khách quí",
+            "vị khách quý",
             "vĩ khách quý",
             "vị khắc quý",
-            "vị khách quý"
+            "vị khách quấy"
         ]
     },
     {
